# RandSource

./: .gitignore  README.md
aggregatable-dkg/src/dkg/: node.rs
randsource/: Cargo.toml  rand_beacon.sh
randsource-local/: Cargo.toml  local_test.sh
randsource-local/src/: keys.rs  lib.rs  main.rs  sig_srs.rs
randsource/src/: lib.rs  main.rs  publish.rs  writer.rs
tests/: thresholds.py
tests/data/: distributed_results.csv  local_results.csv  networked_results.csv
