[package]
name = "randsource-local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# aggregatable-dkg = { git = "https://github.com/kobigurk/aggregatable-dkg" }
aggregatable-dkg = { path = "../aggregatable-dkg" }
ark-ff = { version = "^0.2.0", features = [ "std" ] }
ark-ec = { version = "^0.2.0", features = [ "std" ] }
ark-poly = { version = "^0.2.0", features = [ "std" ] }
ark-serialize = { version = "^0.2.0", features = [ "std" ] }
ark-std = { version = "^0.2.0", features = [ "std" ] }
ark-bls12-381 = { version = "^0.2.0", features = [ "std" ] }
thiserror = "1.0.19"
rand = "0.7.3"
rand_chacha = { version = "0.2.1" }
once_cell = "^1.7"
blake2s_simd = "0.5.10"
sha2 = "0.10.2"
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] } 
csv = "1.1"
log = "0.4"